--- a/app/styles/estilos.css
+++ b/app/styles/estilos.css
@@ -8,6 +8,7 @@ footer{
 	padding: 1em;
 }
 header{
+	box-shadow: 0 0 10px black;
 	left: 5%;
 	position: absolute;
 	top: 10px;
@@ -83,7 +84,8 @@ section{
 	position: relative;
 }
 .capitular{
-	font-family: 'Cabin', sans-serif;
+	color: #112659;
+	font-family: 'Cabin', sans-serifF;
 	font-size: 200%;
 	font-weight: 600;
 	line-height: 16px;
@@ -123,7 +125,7 @@ section{
 	width: 100%;
 }
 .descargas{
-	background: rgba(130,150,195, .1);
+	background: rgba(130,150,195,.1);
 	border-radius: 5px;
 	margin: 1em auto;
 	padding: 2em 1em;
@@ -134,21 +136,29 @@ section{
 .enLinea{
 	display: inline-block;
 }
-.glyphicon-chevron-left,
-.glyphicon-chevron-right{
-	border: 4px solid white;
-	border-radius: 50%;
+.fa-angle-double-left,
+.fa-angle-double-right{
+	font-size: 30px !important;
+}
+
+.fa-angle-double-left,
+.fa-angle-double-right{
+	color: white;
+	font-size: 30px;
 	height: 45px !important;
+	position: absolute;
+	top: 50%;
 	width: 45px !important;
 }
-.glyphicon-chevron-left:before,
-.glyphicon-chevron-right:before{
-	font-size: 30px;
-	line-height: 45px;
+.fa-angle-double-left{
+	left: 40%;
+	text-align: left;
+}
+.fa-angle-double-right{
+	text-align: left;
 }
 .imagenCarrusel{
 	background-size: cover;
-	background-position: center bottom;
 	height: 450px;
 }
 .jumbotron{
@@ -164,7 +174,8 @@ section{
 	z-index: 5;
 }
 	.jumbotron h1,
-	.tab-content h2{
+	.tab-content h2,
+	.resalta{
 		color: #112659;
 		font-size: 20px;
 		font-weight: 600;
@@ -211,7 +222,7 @@ section{
 	.contenedorLogo{
 		padding: 15px 10px;
 		position: absolute;
-		right: 0;
+		right: 1em;
 	}
 	.contenedorLogo img{
 		width: 125px;
@@ -237,7 +248,6 @@ section{
 	}
 	.nav a:hover{
 		background: #005db9 !important;
-		border: 1px solid transparent !important;
 		border-radius: 0 !important;
 	}
 .navMobile{
@@ -286,6 +296,22 @@ section{
 		background:  #005db9 !important;
 		border: none !important;
 		color: white !important;
+	}
+.textoEntrada{
+	background: rgba(130,150,195, .5) !important;
+	background: #112659;
+	bottom: initial !important;
+	max-width: 600px !important;
+	padding: 1em;
+	top: 60%;
+}
+	.textoEntrada h2{
+		color: white;
+		text-shadow: 0 0 10px #112659;
+		font-size: 22px;
+		font-weight: 600;
+		margin: 0;
+		text-align: left;
 	}
 .contentTab{
 	margin: 0 auto;
