--- a/app/styles/estilos.css
+++ b/app/styles/estilos.css
@@ -57,17 +57,20 @@ section{
 .adjunto{
 	border: 2px solid transparent;
 	border-radius: 2px;
-	color: #005db9;
+	color: white;
 	display: block;
+	font-weight: 600;
 	margin: 0 auto;
 	padding: .5em 1.5em;
+	text-transform: uppercase;
 	width: 100%;
 }
 	.adjunto:hover{
-		border: 2px solid #005db9;
+		color: white;
 	}
 	.adjunto img{
 		margin-left: 1em;
+		width: 25px;
 	}
 .alignMidle{
 	vertical-align: middle;
@@ -124,14 +127,35 @@ section{
 	position: relative;
 	width: 100%;
 }
-.descargas{
-	background: rgba(130,150,195,.1);
-	border-radius: 5px;
-	margin: 1em auto;
-	padding: 2em 1em;
+.contenedorBoton{
+	margin-top: 1em;
 	text-align: center;
+}
+	.contenedorBoton button{
+		background: white;
+		border: none;
+		color: #112659;
+		font-size: 12px;
+		text-transform: uppercase;
+	}
+	.contenedorBoton button:hover{
+		background: transparent;
+		color: #2a6496;
+		text-decoration: underline;
+	}
+.descargas{
+	/*background: rgba(130,150,195,.1);*/
+	background: #337ab7;
+	border-radius: 0 0 5px 5px;
+	margin: 0 auto;
+	padding: 1em;
+	text-align: center;
+	transition:.2s;
 	width: 60%
 }
+	.descargas:hover{
+		background: #1EBEB4;
+	}
 
 .enLinea{
 	display: inline-block;
@@ -157,6 +181,9 @@ section{
 .fa-angle-double-right{
 	text-align: left;
 }
+.fa-youtube-play{
+	margin-left: .5em;
+}
 .imagenCarrusel{
 	background-size: cover;
 	height: 450px;
@@ -165,7 +192,7 @@ section{
 	/*background: rgba(130,150,195, .1);*/
 	
 	/*border-bottom: 2px solid #005db9;*/
-	border-radius: 5px !important;
+	border-radius: 5px 5px 0 0 !important;
 	/*border-top: 2px solid #005db9;*/
 	/*box-shadow: 0 0 5px #005db9;*/
 	margin: -50px auto 0 auto;
@@ -213,8 +240,12 @@ section{
 .listaGris li{
 	color: #666 !important;
 }
+.modal-header{
+	border:none;
+}
 .mutualheader{
-	background: rgba(255,255,255, .8);
+	background: rgba(255,255,255, .8) !important;
+	background: white;
 	display: block;
 	height: 90px;
 	position: relative;
@@ -281,17 +312,18 @@ section{
 }
 	.tab-content li{
 		color: #112659;
-		font-weight: 100;
+		font-weight: 600;
 	}
 .tabsBottom{
 	margin: 0 auto;
-	width: 60%;
+	width: 65%;
 }
 	.nav-tabs.nav-justified > li > a{
 		font-size: 13px !important;
 		border: none !important;
 		border-radius: 0 !important;
 	}
+
 	.tabsBottom li.active > a{
 		background:  #005db9 !important;
 		border: none !important;
@@ -318,12 +350,23 @@ section{
 	padding: 3em 0 2em;
 	width: 80%;
 }
+	.contentTab ul{
+		margin-top: 1em;
+	}
 .uppercase{
 	text-transform: uppercase;
 }
-@media screen and (max-width: 800px){
+
+@media screen and (max-width: 960px){
+	.tabsBottom{
+		width: 80%;
+	}
 }
+
 @media screen and (max-width: 800px){
+	.botonMenu span{
+		border-right: 0;		
+	}
 	.jumbotron, .descargas, .tabsBottom, .tab-content{
 		width: 100%;
 	}
