--- a/app/styles/estilos.css
+++ b/app/styles/estilos.css
@@ -408,6 +408,9 @@ section{
 .uppercase{
 	text-transform: uppercase;
 }
+.ventajas{
+	margin-left: 1em !important;
+}
 
 
 @media screen and (max-width: 800px){
