--- a/app/styles/estilos.css
+++ b/app/styles/estilos.css
@@ -306,6 +306,7 @@ section{
 		min-width: 220px;
 	}
 	.contFooter h3{
+		color: #428bca;
 		font-family: 'futura_ltbook';
 		font-size: 18px;
 		font-weight: 600;
